--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
 
     <section>
-        <div class="join join-vertical w-full">
+        <div class="join join-vertical w-full  p-10">
             <div class="collapse collapse-arrow join-item border border-base-300">
               <input type="radio" name="my-accordion-4" checked="checked" /> 
               <div class="collapse-title text-xl font-medium">
