--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
  </section>
 
  <section class="my-10">
-    <div id="card-container" class="flex justify-center gap-4"></div>
+    <div id="card-container" class="flex flex-row justify-center  md:flex-row justify-center gap-4"></div>
+ </section>
+ <section id="card-container1" class=" grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-2 m-10">
+
+    
+ 
  </section>
 
  <script src="./js/main.js"></script>
