--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
  <!-- nav section -->
- <section class="m-10">
-    <nav class="flex justify-between mb-10 ">
+ <section class="m-5 lg:m-10">
+    <nav class="flex  gap-4  lg:flex justify-between mb-10">
         <img src="./image/Logo.png" alt="">
         <button class="btn capitalize rounded-lg font-bold">Sort by view</button>
        <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold">blog</button></a>
