--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
  <!-- nav section -->
- <section class="m-5 lg:m-10">
+ <section class="m-5 lg:mx-20 my-10">
     <nav class="flex  gap-4  lg:flex justify-between mb-10">
         <img src="./image/Logo.png" alt="">
         <button class="btn capitalize rounded-lg font-bold">Sort by view</button>
@@ -27,9 +27,9 @@
  </section>
 
  <section class="my-10">
-    <div id="card-container" class="flex flex-row justify-center  md:flex-row justify-center gap-4"></div>
+    <div id="card-container" class="flex flex-row justify-center  md:flex-row justify-center gap-5"></div>
  </section>
- <section id="card-container1" class=" grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-2 m-10">
+ <section id="card-container1" class=" grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-2 m-20">
 
     
  
