--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
  <!-- nav section -->
  <section class="m-5 lg:mx-20 my-10">
-    <nav class="flex  gap-4  lg:flex justify-between mb-10">
-        <img src="./image/Logo.png" alt="">
+    <nav class="flex  gap-1  lg:flex justify-between mb-10">
+        <img class="" src="./image/Logo.png" alt="">
         <button class="btn capitalize rounded-lg font-bold">Sort by view</button>
        <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold">blog</button></a>
         
@@ -27,9 +27,9 @@
  </section>
 
  <section class="my-10">
-    <div id="card-container" class="flex flex-row justify-center  md:flex-row justify-center gap-5"></div>
+    <div id="card-container" class="flex flex-row  m-10 md:flex-row justify-center gap-5"></div>
  </section>
- <section id="card-container1" class=" grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-2 m-20">
+ <section id="card-container1" class=" grid grid-cols-1 w-[85%] mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-2 m-20">
 
     
  
