--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <section class="my-10">
     <div id="card-container" class="flex flex-row  m-10 md:flex-row justify-center gap-5"></div>
  </section>
- <section id="card-container1" class=" grid grid-cols-1  mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 gap-4 m-20">
+ <section id="card-container1" class=" grid grid-cols-1  mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 mx-20">
  </section>
  <div id="drawing" class="text-center items-center  hidden">
    <img class="mx-auto" src="./image/Icon.png" alt="">
