--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
           </div>
     </section>
 
- <script src="./js/main.js"></script>
+ <script src="./js/index.js"></script>
 </body>
 
 </html>
