--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH TUBE</title>
-      
+    <link rel="icon" href="./image/youtube.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -36,7 +36,7 @@
    <h1 class="font-extrabold">Oops!! Sorry, There is no <br> content here</h1>
  </div>
 
- <script src="./js/main.js"></script>
+ <script src="./js/index.js"></script>
 </body>
 
 </html>
