--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <section class="m-5 lg:mx-20 my-10">
     <nav class="flex  gap-1  lg:flex justify-between mb-10">
         <img class="" src="./image/Logo.png" alt="">
-        <button class="btn capitalize rounded-lg font-bold" id="sort-view">Sort by view</button>
+        <button  class="btn capitalize rounded-lg font-bold" id="sortButton">Sort by view</button>
        <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold">blog</button></a>
         
     </nav>
@@ -29,7 +29,7 @@
  <section class="my-10">
     <div id="card-container" class="flex flex-row  m-10 md:flex-row justify-center gap-5"></div>
  </section>
- <section id="card-container1" class=" grid grid-cols-1  mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 mx-20">
+ <section id="card-container1" class=" grid grid-cols-1  mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 m-20">
  </section>
  <div id="drawing" class="text-center items-center  hidden">
    <img class="mx-auto" src="./image/Icon.png" alt="">
