--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
  <!-- nav section -->
  <section class="m-5 lg:mx-20 my-10">
-    <nav class="flex  gap-1  lg:flex justify-between mb-10">
+    <nav class="flex flex-col gap-4 md:flex-row gap-1  lg:flex justify-between mb-10">
         <img class="" src="./image/Logo.png" alt="">
         <button  class="btn capitalize rounded-lg font-bold" id="sortButton">Sort by view</button>
-       <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold">blog</button></a>
+       <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold w-full">blog</button></a>
         
     </nav>
     <hr/>
