--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="flex flex-col gap-4 md:flex-row gap-1  lg:flex justify-between mb-10">
         <img class="" src="./image/Logo.png" alt="">
         <button  class="btn capitalize rounded-lg font-bold" id="sortButton">Sort by view</button>
-       <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold w-full">blog</button></a>
+       <a href="./blog.html" > <button class="btn capitalize bg-[#FF1F3D] rounded-lg text-white font-bold w-full active:bg-violet-700 focus:bg-[#FF1F3D]">blog</button></a>
         
     </nav>
     <hr/>
@@ -31,7 +31,7 @@
  </section>
  <section id="card-container1" class=" grid grid-cols-1  mx-10 md:grid-cols-2 gap-4 lg:grid-cols-4 m-20">
  </section>
- <div id="drawing" class="text-center items-center  hidden">
+ <div id="drawing" class="text-center items-center  hidden mb-40 mt-2">
    <img class="mx-auto" src="./image/Icon.png" alt="">
    <h1 class="font-extrabold">Oops!! Sorry, There is no <br> content here</h1>
  </div>
